--- a/web/src/styles.css
+++ b/web/src/styles.css
@@ -37,7 +37,7 @@ code {
     --accent-foreground: oklch(0.21 0.006 285.885);
     --destructive: oklch(0.577 0.245 27.325);
     --destructive-foreground: oklch(0.577 0.245 27.325);
-    --border: oklch(0.2708 0.0423 289.23);
+    --border: oklch(0.3717 0.0358 291.1);
     --input: oklch(0.92 0.004 286.32);
     --ring: oklch(0.871 0.006 286.286);
     --chart-1: oklch(0.646 0.222 41.116);
@@ -100,6 +100,7 @@ code {
 
 @theme inline {
     --color-background: var(--background);
+    --color-midground: var(--midground);
     --color-foreground: var(--foreground);
     --color-card: var(--card);
     --color-card-foreground: var(--card-foreground);
@@ -152,6 +153,9 @@ code {
         @apply bg-background text-foreground;
     }
     h1 {
-        @apply text-2xl text-love;
+        @apply text-3xl text-iris;
+    }
+    h2 {
+        @apply text-2xl text-pine;
     }
 }
